feature-APX-8111-8112-8113-8114: Snyk fixes CVE-2024-38816

--- a/roth-lib-java-pom/pom.xml
+++ b/roth-lib-java-pom/pom.xml
@@ -9,6 +9,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<global.version>2.0.0-SNAPSHOT</global.version>
+		<jetty.version>9.4.56.v20240826</jetty.version>
 	</properties>
 	<scm>
 		<connection>scm:git:git@github.com:roth-source/roth-lib-java.git</connection>
