--- a/roth-lib-java-web/pom.xml
+++ b/roth-lib-java-web/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 		    <groupId>org.eclipse.jetty</groupId>
 		    <artifactId>jetty-server</artifactId>
-		    <version>9.4.51.v20230217</version>
+		    <version>${jetty.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.eclipse.jetty</groupId>
@@ -34,19 +34,19 @@
 		<dependency>
 		    <groupId>org.eclipse.jetty</groupId>
 		    <artifactId>jetty-http</artifactId>
-		    <version>9.4.52.v20230823</version>
+		    <version>${jetty.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet -->
 		<dependency>
 		    <groupId>org.eclipse.jetty</groupId>
 		    <artifactId>jetty-servlet</artifactId>
-		    <version>9.4.51.v20230217</version>
+		    <version>${jetty.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-webapp -->
 		<dependency>
 		    <groupId>org.eclipse.jetty</groupId>
 		    <artifactId>jetty-webapp</artifactId>
-		    <version>9.4.51.v20230217</version>
+		    <version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
 </project>
